# boltz-client

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/actions/check-git-status/: action.yaml
.github/actions/setup-build/: action.yaml
.github/workflows/: ci.yaml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/lib/: Cargo.toml
crates/lib/src/: config.rs  error.rs  keys.rs  lib.rs  models.rs  store.rs
crates/lib/src/api/: mod.rs  types.rs  ws.rs
crates/lib/src/evm/: alchemy.rs  contracts.rs  lz_options.rs  mod.rs  oft.rs  provider.rs  recipient.rs  signing.rs
crates/lib/src/solana/: ata.rs  mod.rs  rpc.rs
crates/lib/src/swap/: manager.rs  reverse.rs
crates/lib/tests/regtest/: docker.rs  main.rs  setup.rs
crates/platform-utils/src/http/: native.rs  wasm.rs
