[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
rpath = true

[workspace]
resolver = "2"
members = [
    "crates/lib",
    "crates/cli",
    "crates/macros",
    "crates/platform-utils",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.88"

[workspace.lints.clippy]
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
struct_field_names = "allow"
arithmetic_side_effects = "warn"

[workspace.dependencies]
# Workspace crates
boltz-client = { path = "crates/lib" }
macros = { path = "crates/macros" }
platform-utils = { path = "crates/platform-utils" }

# Serialization
serde = "1.0.219"
serde_json = "1.0.140"
hex = "0.4.3"

# Async
async-trait = "0.1.88"
tokio = { version = "1.45.1", default-features = false }
futures = { version = "0.3", default-features = false }

# Crypto
k256 = { version = "0.13.0", features = ["arithmetic", "schnorr", "ecdsa"] }

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# CLI
clap = "4.5.40"
rustyline = "16.0.0"
shlex = "1.3.0"

# Key generation
bip39 = "2.2.0"
rand = "0.8"

# TLS
rustls = { version = "0.23.28", default-features = false, features = ["ring"] }

# Proc macro
proc-macro2 = "1.0.97"
quote = "1.0.40"
syn = "2.0.105"

# HTTP (platform-utils deps)
base64 = "0.22.1"
bitreq = { version = "0.3.4" }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "http2", "charset", "system-proxy"] }

# WASM test
wasm-bindgen-test = "0.3.50"
